--- a/src/LeftMenu/LeftMenu.css
+++ b/src/LeftMenu/LeftMenu.css
@@ -4,8 +4,8 @@
     left: 0;
     width: 140px;
     height: 100vh;
-    background-color: #f0f0f0;
     padding: 0;
+    background-color: var(--background-color);
     padding-top:5vh ;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -21,7 +21,7 @@
 }
 .left-menu li:hover {
     border-radius: 10px;
-    background-color: #fcf8f8;
+    background-color: var(--menu-hover);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   }
   
