--- a/src/LeftMenu/Sidebar.css
+++ b/src/LeftMenu/Sidebar.css
@@ -1,6 +1,5 @@
 .sidebar {
     width: 100px; /* Adjusted width to accommodate text */
-    background-color: #f0f0f0;
     position: fixed;
     top: 5vh;
     left: 0;
@@ -30,7 +29,7 @@
   
   .sidebar li:hover {
     border-radius: 10px;
-    background-color: #fcf8f8;
+    background-color:var(--menu-hover);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   }
   
