--- a/src/VideoPage/VideoComments.css
+++ b/src/VideoPage/VideoComments.css
@@ -1,48 +1,89 @@
-/* VideoComments.css */
 .comments-section {
-    overflow-y: auto;
     margin-top: 20px;
-    padding: 15px;
-    background-color: #f8f9fa; /* Light grey background */
-    border: 1px solid #dee2e6; /* Bootstrap's border color */
-    border-radius: 0.25rem; /* Rounded corners */
-}
-
-.comments-section h3 {
-    color: #495057; /* Dark grey text */
-}
-
-.comment {
-    overflow-y: auto;
-    margin-top: 10px;
-    padding: 10px;
-    background-color: white;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-}
-
-.comment p {
-    margin-bottom: 0;
-    color: #212529; /* Bootstrap dark text color */
-}
-
-textarea {
-    width: 100%;
-    margin-top: 10px;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-}
-
-button {
-    margin-top: 10px;
-    padding: 5px 15px;
-    background-color: #007bff; /* Bootstrap primary button color */
-    color: white;
+  }
+  
+  .comments-section h3 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    text-align: left; /* Aligns the title to the left */
+  }
+  .divider {
     border: none;
-    border-radius: 0.25rem;
+    border-top: 2px solid #727171;
+    margin: 10px 0; /* Adjust the margin to your liking */
+  }
+   
+  .comment {
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+  }
+  
+  .comment-header {
+    display: flex;
+    align-items: center;
+  }
+  
+  .comment-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  .comments-text-actions{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .comment-author {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .comment-date {
+    font-size: 0.9em;
+    color: #888;
+  }
+  
+  .comment-text {
+    margin: 10px 0;
+  }
+  
+  .comment-actions {
+    display: flex;
+    gap: 10px;
+    margin-top: 5px;
+  }
+  
+  .comment-form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .comment-area {
+    width: 100%;
+    padding: 10px;
+    border: 0;
+    border-bottom: 1px solid #727171;
+    resize: none;
+    outline: none; /* Remove default outline on focus */
+    transition: border-bottom-color 0.5s ease; /* Add transition for border color */
+  }
+  
+  .comment-area:focus {
+    border-bottom: 2px solid black; /* Change the bottom border color on focus */
+  }
+  
+  .comment-submit {
+    color: #909090;
+    background-color: rgba(0, 0, 0, 0.05);
+    align-self: flex-end;
+    padding: 5px 10px;
+    border: none;
+    width: 100px;
+    border-radius: 30%;
     cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3; /* Darken button on hover */
-}
+  }
+  
