--- a/src/VideoItem/VideoItemRightText.css
+++ b/src/VideoItem/VideoItemRightText.css
@@ -19,18 +19,18 @@
     border-radius: 5px;
   }
   
-  .video-item-right-text .video-details {
+  .video-item-right-text .video-details-right {
     display: flex;
     flex-direction: column;
   }
   
-  .video-item-right-text .video-title {
+  .video-item-right-text .video-title-right {
     font-size: 1rem;
     font-weight: bold;
     margin-bottom: 5px;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: normal;
   }
   
   .video-item-right-text .video-author {
