--- a/src/VideoPage/VideoPage.css
+++ b/src/VideoPage/VideoPage.css
@@ -3,25 +3,26 @@
   flex-direction: column;
   align-items: center;
   height: 100vh; /* Full viewport height */
-  overflow: auto; /* Allow scrolling */
+
 }
 
 .video-page-item {
-  width: 60%;
-  margin: 3vh 0 30px 20vh;
+  width: 100%;
+  margin: 3vh 0 30px 0vh;
 }
 
-.video-player {
+.video-player-page {
   width: 100%;
 }
-
-.video-player video {
+/*880d490*/
+.video-player-page video {
   border-radius: 10px;
-  width: 90%;
-  height: 80%;
+  width: 55em;
+  height: 47vh;
+  object-fit: cover;
 }
 
-.video-details {
+.video-details-page {
   margin-top: 10px;
 }
 
@@ -30,7 +31,7 @@
 }
 
 .main-content {
-  overflow-y: auto;
+ gap:30vh;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -40,29 +41,30 @@
   font-size:10px;
   font-weight: 600;
 }
-.video-img-dir{
+.video-img-dir-page{
   margin-top: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.video-img{
+.video-img-page{
   width:40px;
   height: 40px;
   border-radius: 50%;
 }
-.video-title{
+.video-title-page{
     font-size: 1.5rem;
     line-height: 2.8rem;
     font-weight: 700;
 }
 .video-bar {
-  width: 20%;
   max-height: 80vh;
   margin-top: 20px;
-  margin-right: 20px;
-  padding: 10px;
   border-radius: 10px;
+}
+.video-comments-page
+{
+  width: 90%;
 }
 .like-dislike-container {
   display: flex;
