--- a/src/confirmModal/UpdateVideoModal.css
+++ b/src/confirmModal/UpdateVideoModal.css
@@ -1,20 +1,30 @@
-.add-video-container {
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+  
+.modal-content {
     background: var(--background-color);
     padding: 20px;
     border-radius: 5px;
     text-align: center;
     max-width: 600px;
     width: 100%;
-    height: auto;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: auto;
-    margin-top: 20vh;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add box shadow */
 }
   
-.add-video-form {
+.update-video-form {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -22,30 +32,30 @@
     color: var(--text-color);
 }
   
-.add-video-form h3 {
+.update-video-form h3 {
     margin-bottom: 2rem;
 }
   
-.add-video-form .form-group {
+.update-video-form .form-group {
     margin-bottom: 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
   
-.add-video-form label {
+.update-video-form label {
     font-size: 1em;
     width: 20%;
     text-align: right;
     margin-right: 1rem;
 }
   
-.add-video-form input {
+.update-video-form input {
     width: 75%;
     padding: 0.5rem;
-    color:var(--text-color);
-    background-color: var(--background-color);
     border: none;
+    color: var(--text-color);
+    background-color: var(--background-color);
     border-bottom: 2px solid var(--search-color);
     border-radius: 0;
     outline: none;
@@ -75,36 +85,39 @@
     }
 }
   
-.add-video-form input:focus {
+.update-video-form input:focus {
     animation: border-focus-animation 0.3s forwards;
 }
   
-.add-video-form .button-group {
+.update-video-form .button-group {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: auto;
     padding-top: 1rem;
     margin-bottom: 1vh;
 }
   
-.add-video-form .btn-confirm {
+.update-video-form .btn-confirm, .update-video-form .btn-cancel {
     padding: 0.5rem;
     cursor: pointer;
-    width: 100%;
-    background-color:var(--addvideobackground-button);
-    color: var(--addvideocolor-button);
+    width: 48%;
+}
+  
+.update-video-form .btn-confirm {
+    background-color: var(--ok-button);
+    color: white;
     border: none;
     border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
   
-.add-video-form .btn-confirm svg {
-    margin-left: 0.5rem;
+.update-video-form .btn-cancel {
+    background-color:  var(--cancel-button);
+    color: white;
+    border: none;
+    border-radius: 4px;
 }
   
-.add-video-form .form-group span {
+.update-video-form .form-group span {
     display: flex;
     align-items: center;
     margin-left: auto;
@@ -115,7 +128,7 @@
     text-overflow: ellipsis;
 }
   
-.add-video-form .form-group label svg {
+.update-video-form .form-group label svg {
     margin-right: 0.5rem;
     vertical-align: middle;
 }
