--- a/src/registration/RegisterPage.css
+++ b/src/registration/RegisterPage.css
@@ -9,66 +9,91 @@ body {
     height: 100vh;
     margin: 0;
     transition: background-color 0.3s, color 0.3s;
-}
-
-.wrapper {
+  }
+  
+  .wrapper {
     display: flex;
     width: 100%;
     max-width: 600px;
-    background: var(--background-color);
+    background: var(--back-ground-color);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
     align-items: center;
     justify-content: center;
     padding: 50px;
-    margin-top: 20vh;
+    margin-top: 15vh;
     border-radius: 10px;
-    transition: background-color 0.3s, box-shadow 0.3s;
-}
+  }
 
-.inner {
+
+
+
+  
+  .inner {
     width: 100%;
-}
-
-.register-form {
+  }
+  
+  .register-form {
     width: 100%;
     padding: 30px;
-}
-
-h3 {
+  }
+  
+  h3 {
     text-align: center;
     font-size: 24px;
     margin-bottom: 30px;
     font-weight: 500;
     color: var(--text-color);
-}
-
-.form-group {
+  }
+  
+  .form-group {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     margin-bottom: 20px;
-}
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
-.form-group .form-input {
-    width: calc(50% - 10px);
+  .form-group .form-input {
+    width: 100%;
     padding: 10px 0;
     border: none;
     border-bottom: 2px solid var(--text-color);
     background: transparent;
     outline: none;
-    transition: border-color 0.3s;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    margin-bottom: 10px;
+    position: relative;
 }
-
-.form-group .form-input:focus {
-    border-bottom-color: var(--backgroud-color);
+.form-group .form-input::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background: var(--text-color);
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.3s ease-out;
 }
+.form-group .form-input {
+    width: calc(50% - 10px);
+    margin-bottom: 0;
+  }
 
-.form-wrapper {
+.form-group .form-input:focus::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+  
+
+  .form-wrapper {
     position: relative;
     margin-bottom: 20px;
-}
-
+  }
+  
+/* Form Input with Sliding Underline Effect */
 .form-wrapper .form-input {
     width: 100%;
     padding: 10px 0;
@@ -76,24 +101,41 @@ h3 {
     border-bottom: 2px solid var(--text-color);
     background: transparent;
     outline: none;
-    transition: border-color 0.3s;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    position: relative;
 }
 
-.form-wrapper .form-input:focus {
-    border-bottom-color: var(--backgroud-color);
+.form-wrapper .form-input:focus::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background: var(--text-color);
+    transform: scaleX(3);
+    transform-origin: right;
+    transition: transform 0.3s ease-out;
 }
 
-.form-wrapper i {
+.form-wrapper .form-input:focus::after {
+    transform: scaleX(2);
+    transform-origin: left;
+}
+
+  
+  
+  
+  .form-wrapper i {
     position: absolute;
     top: 50%;
     right: 3px;
     transform: translateY(-50%);
     color: var(--text-color);
-}
-
-.register-button {
+  }
+  
+  .register-button {
     display: block;
     width: 100%;
     padding: 10px;
@@ -106,30 +148,131 @@ h3 {
     margin: 20px 0;
     text-align: center;
     transition: background-color 0.3s;
-}
-
-.register-button i {
+  }
+  
+  .register-button i {
     margin-left: 10px;
     font-size: 16px;
-}
-
-.register-button:hover {
+  }
+  
+  .register-button:hover {
     background: var(--btn-hover);
-}
-
-.footer {
+  }
+  
+  .footer {
     text-align: center;
     font-size: 0.9em;
     color: var(--text-color);
     padding-top: 1em;
     font-weight: 600;
-}
-
-.footer span {
+  }
+  
+  .footer span {
     cursor: pointer;
     text-decoration: underline;
-}
-
-.footer span:hover {
-    color: var(--text-color);
-}
+  }
+  
+  .footer span:hover {
+    color: var(--background-color);
+  }
+  
+  /* Media query for screens smaller than 768px */
+  @media (max-width: 767px) {
+    .wrapper {
+      padding: 30px;
+      margin-top: 10vh;
+    }
+  
+    .register-form {
+      padding: 20px;
+    }
+  
+    h3 {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+  
+    .register-button {
+      padding: 8px;
+    }
+  
+    .footer {
+      font-size: 0.8em;
+    }
+  }
+  
+  /* Media query for screens between 768px and 1023px */
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .wrapper {
+      padding: 40px;
+      margin-top: 10vh;
+    }
+  
+    .register-form {
+      padding: 25px;
+    }
+  
+    h3 {
+      font-size: 22px;
+      margin-bottom: 25px;
+    }
+  
+    .register-button {
+      padding: 9px;
+    }
+  
+    .footer {
+      font-size: 0.85em;
+    }
+  }
+  
+  /* Media query for screens between 1024px and 1439px */
+  @media (min-width: 1024px) and (max-width: 1439px) {
+    .wrapper {
+      padding: 50px;
+      margin-top: 10vh;
+    }
+  
+    .register-form {
+      padding: 30px;
+    }
+  
+    h3 {
+      font-size: 24px;
+      margin-bottom: 30px;
+    }
+  
+    .register-button {
+      padding: 10px;
+    }
+  
+    .footer {
+      font-size: 0.9em;
+    }
+  }
+  
+  /* Media query for screens larger than 1440px */
+  @media (min-width: 1440px) {
+    .wrapper {
+      padding: 60px;
+      margin-top: 12vh;
+    }
+  
+    .register-form {
+      padding: 35px;
+    }
+  
+    h3 {
+      font-size: 26px;
+      margin-bottom: 35px;
+    }
+  
+    .register-button {
+      padding: 12px;
+    }
+  
+    .footer {
+      font-size: 1em;
+    }
+  }
+  
