--- a/src/leftmenu/Sidebar.css
+++ b/src/leftmenu/Sidebar.css
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
     text-align: center;
     cursor: pointer;
   }
@@ -35,7 +35,12 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   }
   
-  .sidebar li span {
-    font-size: 8px;
+  .sidebar li span  {
+    font-size: 10px;
   }
+
+  .icon-container-user-info span {
+    font-size:10px;
+  }
+  
   
