--- a/src/userInfo/UserInfo.css
+++ b/src/userInfo/UserInfo.css
@@ -4,7 +4,7 @@
     border-radius: 5px;
     text-align: center;
     max-width: 600px;
-    width: 100%;
+    width: 500px;
     height: auto;
     display: flex;
     flex-direction: column;
