--- a/src/videoitem/VideoItem.css
+++ b/src/videoitem/VideoItem.css
@@ -21,11 +21,12 @@
 }
 
 .video-img {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   margin-right: 10px;
   margin-bottom: 15px;
+  cursor: pointer;
 }
 
 .video-info {
