--- a/src/videopage/videoComments/VideoComments.css
+++ b/src/videopage/videoComments/VideoComments.css
@@ -28,6 +28,7 @@
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
+    cursor: pointer;
   }
   .comments-text-actions{
     display: flex;
